...
                    This is because tax paid for a company will be refunded.  So we can figure out how much tax for the money we spend by a single click.{'\n'}{'\n'}
                </Text>
                <View style={{ height: 80 }} />
            </RoundedScrollContainer>
            <View style={{ flexDirection: 'row', paddingHorizontal: 15, paddingVertical: 10, backgroundColor: '#fff', borderTopWidth: 1, borderTopColor: '#eee' }}>
                <View style={{ flex: 2 }}>
                    <Button title={'ACCEPT'} onPress={() => { if (updateCheckedState) { updateCheckedState(true) } navigation.goBack() }} />
                </View>
                <View style={{ width: 10 }} />
                <View style={{ flex: 2 }}>
                    <Button title={'REJECT'} onPress={() => { if (updateCheckedState) { updateCheckedState(false) } navigation.goBack() }} />
                </View>
            </View>
...
