...
        { title: 'Transaction Auditing', image: require('@assets/images/Home/options/transaction_auditing.png'), onPress: () => navigation.navigate('AuditScreen') },
      ],
    },
    {
      title: 'HR & Tracking',
      items: [
        { title: 'User Attendance', image: require('@assets/images/Home/options/attendance.png'), onPress: () => navigation.navigate('UserAttendanceScreen') },
        { title: 'Late Records', image: require('@assets/images/Home/options/attendance/punching.png'), onPress: () => navigation.navigate('LateRecordsScreen') },
        isAdmin
          ? { title: 'Staff Tracking', image: require('@assets/images/Home/options/attendance/dashboard.png'), onPress: () => navigation.navigate('StaffTrackingScreen') }
          : { title: 'My Location', image: require('@assets/images/Home/section/services.png'), onPress: () => navigation.navigate('MyLocation') },
        { title: 'Vehicle Tracking', image: require('@assets/images/Home/section/pickup.png'), onPress: () => navigation.navigate('VehicleTrackingScreen') },
        { title: 'Vehicle Maintenance', image: require('@assets/images/Home/section/service.png'), onPress: () => navigation.navigate('VehicleMaintenanceScreen') },
...
